# magisteri

./: CMakeLists.txt  _allocate.h  _create.h  _equation_of_motion.h  _force_area.h  _force_length.h  _functions.h  _initial_structure.h  _mojidod.h  _output.h  _periodic_boundaries.h  _rndom.h  main.c
